# AdvProjectionViewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shader.frag  shader.vert
SDL2/include/: .PLACE_NDI_INCLUDES_HERE
glad/: gl.h
src/: NDI.c  NDI.h  Render.c  Render.h  Window.c  Window.h
